cleanup + text alignmet issues

--- a/girleffect/static_src/site/patterns/00-atoms/section/_section.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/section/_section.scss
@@ -28,6 +28,18 @@
         }
     }
 
+    &--intro {
+        padding: 0;
+        @include body-container;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        max-width: 100%;
+
+        @include media-query(tablet-portrait) {
+            margin-top: 2em;
+        }
+    }
+
     &--body {
         padding: 0;
 
